# databaseinfoget

./: README.md
c++database/: CMakeLists.txt
c++database/include/: DataMessageGet.hpp
c++database/src/: DataMessageGet.cpp
